added animal names and contact info

--- a/animal-shelter.html
+++ b/animal-shelter.html
@@ -8,18 +8,35 @@
     <div class="title">
       <h1>Portland Animal Shelter</h1>
     </div>
-    
     <div class="column">
         <h1>Pigs</h1>
         <img src="img/pig.jpeg" alt="pig" />
+        <ul>
+          <li>Jerry -- 7 years old</li>
+          <li>Joe -- 4 years old</li>
+          <li>Ethel -- 37 years old</li>
+        </ul>
     </div>
     <div class="column">
         <h1>Llamas</h1>
         <img src="img/llama.jpg" alt="llama" />
+        <ul>
+          <li>Junk -- 7 years old</li>
+          <li>Trash -- 7 years old</li>
+          <li>Junktrash -- 37 years old</li>
+        </ul>
     </div>
     <div class="column">
         <h1>Hamsters</h1>
         <img src="img/hamster.jpg" alt="hamster" />
+        <ul>
+          <li>Chewy -- 2 years old</li>
+          <li>Bullet -- 7 years old</li>
+          <li>Methhead -- 3 years old</li>
+        </ul>
+    </div>
+    <div class="footer">
+      <h3>Want one? Call 593-294-1840 now or <a href="mailto:joe@example.com?subject=feedback">email us.</a></h3>
     </div>
   </body>
 </html>
