--- a/animal-shelter.html
+++ b/animal-shelter.html
@@ -21,9 +21,9 @@
         <h1>Llamas</h1>
         <img src="img/llama.jpg" alt="llama" />
         <ul>
-          <li>Junk -- 7 years old</li>
-          <li>Trash -- 7 years old</li>
-          <li>Junktrash -- 37 years old</li>
+          <li>Junk -- 2 years old</li>
+          <li>Trash -- 3 years old</li>
+          <li>Junktrash -- 10 years old</li>
         </ul>
     </div>
     <div class="column">
@@ -31,8 +31,8 @@
         <img src="img/hamster.jpg" alt="hamster" />
         <ul>
           <li>Chewy -- 2 years old</li>
-          <li>Bullet -- 7 years old</li>
-          <li>Methhead -- 3 years old</li>
+          <li>Bullet -- 7 months old</li>
+          <li>Methhead -- 3 months old</li>
         </ul>
     </div>
     <div class="footer">
